--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/normalize.css/normalize.css";
+
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  font-size: 10px;
+}
+
+.full-screen {
+  display: block;
+  min-height: 100vh;
+}
