feat(navbar): change title on scroll

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <div class="navbar__logo">Oskar</div>
+  <div class="navbar__logo">{{ navbarTitle }}</div>
   <ul  class="navbar__links">
     <li>O mnie</li>
     <li>Doświadczenie</li>
