--- a/src/app/components/hobby/hobby.component.html
+++ b/src/app/components/hobby/hobby.component.html
@@ -1,7 +1,7 @@
 <div class="hobby">
   <div class="hobby__bike">
     Lubie rowerowac
-    <img class="hobby__upper-image" src="/assets/violin-2.JPG" />
+    <img class="hobby__upper-image" src="/assets/violin-2.jpg" />
   </div>
   <div class="hobby__music">
     robic muzyki i grac je
