--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -6,12 +6,66 @@
   
   font-size: 2rem;
   color: white;
-  z-index: 999;
 
   background-color: rgba($color: #000000, $alpha: 0.2);
 
+  &--hamburger-open &__hamburger-stick:nth-of-type(1) {
+    transform: translateY(1.8rem) scale(0.5);
+    opacity: 0;
+  }
+  &--hamburger-open &__hamburger-stick:nth-of-type(2) {
+    transform: rotateZ(45deg);
+    opacity: 1;
+  }
+  &--hamburger-open &__hamburger-stick:nth-of-type(3) {
+    transform: rotateZ(-45deg);
+    opacity: 1;
+  }
+  &--hamburger-open &__hamburger-stick:nth-of-type(4) {
+    transform: translateY(0.2rem) scale(0.5);
+    opacity: 0;
+  }
+
+  &--hamburger-open &__links {
+    visibility: visible;
+    opacity: 1;
+  }
+
   &__links {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    width:  100%;
+    height: 100vh;
+
+    position: fixed;
+    top:    0;
+    right:  0;
+    bottom: 0;
+    left:   0;
+
+    opacity: 0;
+    visibility: hidden;
+
+    padding: 0;
+    margin: 0;
+  
+    list-style: none;
+    font-size: 4rem;
+    background-color: black;
+
+    transition: all 0.5s;
+
+    li {
+      padding: 2rem;
+    }
+
+    li:active {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 2rem;
+    }
   }
 
   &__hamburger {
@@ -20,10 +74,21 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
+    cursor: pointer;
   }
 
   &__hamburger-stick {
-    height: 0.4rem;
+    height: 0.2rem;
     background-color: white;
+    transition: all 0.4s;
+  }
+
+  &__hamburger-stick:nth-of-type(2) {
+    width: 100%;
+    position: absolute;
+    top: 0.9rem;
+    left: 0;
+    opacity: 0;
   }
 }
