--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,10 @@
   left: 0;
   z-index: 999;
 }
+
+.welcome-container {
+}
+
+.section-transition {
+  transition: background-color 1s, filter 2s;
+}
