--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,7 +7,7 @@
   font-size: 2rem;
   color: white;
 
-  background-color: rgba($color: #000000, $alpha: 0.2);
+  // background-color: rgba($color: #000000, $alpha: 0.2);
 
   &--hamburger-open &__hamburger-stick:nth-of-type(1) {
     transform: translateY(1.8rem) scale(0.5);
@@ -54,7 +54,7 @@
   
     list-style: none;
     font-size: 4rem;
-    background-color: black;
+    background-color: rgb(72, 153, 223);
 
     transition: all 0.5s;
 
