--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,10 @@
 <div class="welcome">
   <div class="welcome__header">Oskar Dadan</div>
-  <div class="welcome__sub-header">człowiek IT</div>
+  <div class="welcome__sub-header">Front-end developer</div>
+  <div class="welcome__icons">
+    <a href="mailto:oskar.dadan@gmail.com">                       <fa-icon [icon]="faEnvelope"></fa-icon></a>
+    <a href="https://github.com/Niekarp"          target="_blank"><fa-icon [icon]="faGithub"></fa-icon></a> 
+    <a href="https://linkedin.com/in/oskar-dadan" target="_blank"><fa-icon [icon]="faLinkedin"></fa-icon></a>
+  </div>
+  <fa-icon class="welcome__nav-arrow" [icon]="faChevronDown" (click)="navigateToSectionBottom()"></fa-icon>
 </div>
