--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-navbar *ngIf="navbarConfig" class="navbar-container" [config]="navbarConfig" (targetReached)="highlightBackground($event)"></app-navbar>
+<app-navbar *ngIf="navbarConfig" class="navbar-container" [config]="navbarConfig" (targetReached)="highlightBackground($event); startTimeline($event)"></app-navbar>
 
 <app-welcome    class="full-screen section-transition welcome-container"></app-welcome>
-<app-experience class="full-screen section-transition"></app-experience>
+<app-experience class="full-screen section-transition raised"></app-experience>
 <app-projects   class="full-screen section-transition"></app-projects>
-<app-hobby      class="full-screen section-transition"></app-hobby>
+<app-hobby      class="full-screen section-transition raised"></app-hobby>
 
 <!-- <router-outlet></router-outlet> -->
