--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -1,13 +1,38 @@
 .tech {
   height: 100%;
-  border: 1px solid black;
-  border-bottom: none;
-  border-radius: 2rem;
+  // border: 1px solid black;
+  // border-bottom: none;
+  // border-radius: 2rem;
+
+  &__header {
+    font-size: 2rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    white-space: nowrap;
+    margin: 0;
+  }
+
+  &__header::before, &__header::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #ff3a4a;
+  }
+
+  &__logo-container {
+    display: flex;
+    justify-content: space-around;
+  }
 
   &__logo {
-    width: 25%;
+    width: 17%;
     max-height: 100%;
     border-style: none;
+    transition: opacity 1.5s;
+    opacity: 0;
   }
 }
  
