fix: background-color and filter

--- a/src/app/components/hobby/hobby.component.html
+++ b/src/app/components/hobby/hobby.component.html
@@ -1,4 +1,4 @@
-<div class="hobby">
+<div class="hobby filter-transition">
   <div class="hobby__bike">
     Lubie rowerowac
     <img class="hobby__upper-image" src="/assets/violin-2.jpg" />
