--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="projects">
+<div class="projects filter-transition">
   <app-project class="projects__item"></app-project>
   <app-project class="projects__item"></app-project>
   <app-project class="projects__item"></app-project>
