--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="welcome">
+<div class="welcome filter-transition">
   <div class="welcome__header">Oskar Dadan</div>
   <div class="welcome__sub-header">Front-end developer</div>
   <div class="welcome__icons">
