--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,6 @@
   transform: translate3d(0px, 0px, 0px);
 }
 
-.section-transition {
-  transition: background-color 1s, filter 2s;
+.background-transition {
+  transition: background-color 1s;
 }
