--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -13,6 +13,8 @@
     width: 100%;
     white-space: nowrap;
     margin: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 25% 25% 0 0;
   }
 
   &__header::before, &__header::after {
@@ -25,6 +27,7 @@
   &__logo-container {
     display: flex;
     justify-content: space-around;
+    background-color: rgba(0, 0, 0, 0.2);
   }
 
   &__logo {
