--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -54,7 +54,8 @@
   
     list-style: none;
     font-size: 4rem;
-    background-color: rgb(72, 153, 223);
+    // background-color: rgb(72, 153, 223);
+    background-color: rgba(72, 153, 223, 0.6);
 
     transition: all 0.5s;
 
