--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,7 +1,10 @@
 <div class="project">
-  <img class="project__img" src="/assets/project-1.png" />
+  <img class="project__img" [src]="project.imgSrc"/>
+  <div class="project__header">
+    {{ project.title }}
+    <img class="project__tech" [src]="'/assets/' + project.tech" />
+  </div>
   <div class="project__desc">
-    Projekt o juliku
-    <img class="project__tech" src="/assets/vue-logo.png" />
+    {{ project.desc }}
   </div>
 </div>
