--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -1,23 +1,37 @@
 .project {
-  width:  100%;
-  height: 100%;
-  border: 1px solid black;
+  // width:  100%;
+  // height: 100%;
+  border: 1px solid white;
   border-radius: 2rem;
+  background-color: rgba(23, 54, 81, 0.5);
 
   &__img {
     width: 100%;
-    max-height: 90%;
+    height: 30rem;
     border-radius: 2rem;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom: 1px solid white;
     object-fit: cover;
   }
 
-  &__desc {
+  &__header {
+    font-size: 3rem;
+    text-align: left;
     position: relative;
+    padding: 1rem;
+    padding-left: 2rem
+  }
+
+  &__desc {    
+    border-top: 1px dotted white;
+    padding: 2rem;
     font-size: 2rem;
   }
 
   &__tech {
-    width: 3rem;
+    width: 3.5rem;
+    margin-right: 1rem;
     position: absolute;
     right: 0;
   }
