--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,8 +1,3 @@
 <div class="projects filter-transition">
-  <app-project class="projects__item"></app-project>
-  <app-project class="projects__item"></app-project>
-  <app-project class="projects__item"></app-project>
-  <app-project class="projects__item"></app-project>
-  <app-project class="projects__item"></app-project>
-  <app-project class="projects__item"></app-project>
+  <app-project *ngFor="let project of projects" class="projects__item" [project]="project"></app-project>
 </div>
