--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,10 +1,19 @@
+:host {
+  background: linear-gradient(90deg, #a2cdf0 0%, #285c8b 100%);
+  // background-color: #4899df;
+}
+
 .projects {
   display: grid;
-  grid-template-rows: repeat(6, 50vh);
+  // grid-template-rows: repeat(6, 50vh);
   grid-template-columns: 100%;
-  gap: 2rem;
+  // gap: 2rem;
 
   &__item {
     padding: 3rem;
+  }
+
+  &__item:first-of-type {
+    padding-top: 6rem;
   }
 } 
