feat(hobby): add desktop version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 <app-welcome    class="full-screen background-transition welcome-container"></app-welcome>
 <app-experience class="full-screen background-transition raised"></app-experience>
 <app-projects   class="full-screen background-transition"></app-projects>
-<app-hobby      class="full-screen background-transition raised"></app-hobby>
+<app-hobby      class="background-transition raised"></app-hobby>
 
 <!-- <router-outlet></router-outlet> -->
