--- a/src/app/components/hobby/hobby.component.html
+++ b/src/app/components/hobby/hobby.component.html
@@ -42,8 +42,8 @@
     <img class="hobby__upper-image" src="/assets/violin.png" />
   </div>
   <div class="hobby__bike">
-    <svg class="hobby__svg" preserveAspectRatio="xMinYMin meet" style="position: absolute;top: 0;width: 100%;left: 0;/*! height: 100%; */z-index: 0;border-top: 1rem #4899de dashed;" viewBox="0 0 500 500">
-      <path style="stroke: none; fill:#4899df;/*! border-top: 1px solid white; */" d="M 1 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path>
+    <svg class="hobby__svg" preserveAspectRatio="none" style="position: absolute;top: 0;width: 100%;left: 0;/*! height: 100%; */z-index: 0;border-top: 1rem #4899de dashed;" viewBox="0 0 500 500">
+      <path style="stroke: none; fill:#4899df;/*! border-top: 1px solid white; */" d="M 0 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path>
     </svg>
     <!-- <path class="hobby__svg" style="stroke: none; fill:#4899df;/*! border-top: 1px solid white; */" d="M 1 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path> -->
     <div class="hobby__music-title hobby__bike-title">Kolarstwo</div>
