--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -6,7 +6,8 @@
 .projects {
   display: grid;
   // grid-template-rows: repeat(6, 50vh);
-  grid-template-columns: 100%;
+  // grid-template-columns: 100%;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   // gap: 2rem;
 
   &__item {
