--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -1,6 +1,7 @@
 :host {
-  background-color: #368dd6;
-  background: linear-gradient(90deg, rgba(54,141,214,1) 0%, rgba(40,92,139,1) 100%);
+  // background-color: #368dd6;
+  // background: linear-gradient(90deg, rgba(54,141,214,1) 0%, rgba(40,92,139,1) 100%);
+  background: linear-gradient(90deg, #e89494 0%, #285c8b 100%);
 }
 :host.off {
   background-color: rgb(23, 54, 81);
@@ -16,10 +17,17 @@
   }
 
   &__tech {
-    height: 15%;
     position: sticky;
     display: scrol;
     display: block;
     bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .experience {
+    &__tech {
+      margin-top: 10rem;
+    }
   }
 }
