--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -1,5 +1,4 @@
 .tech {
-  height: 100%;
   // border: 1px solid black;
   // border-bottom: none;
   // border-radius: 2rem;
@@ -26,16 +25,52 @@
 
   &__logo-container {
     display: flex;
+    flex: 1;
     justify-content: space-around;
     background-color: rgba(0, 0, 0, 0.2);
   }
 
+  &__logo-container-overlay {
+    height: 100%;
+    position: absolute; 
+    bottom: 0;
+    left: 0;
+    background-color: initial;
+  }
+
   &__logo {
     width: 17%;
-    max-height: 100%;
     border-style: none;
     transition: opacity 1.5s;
     opacity: 0;
   }
+
+  &__logo--overlay {
+    opacity: 0.9;
+  }
+
+  &__logo-wrapper {
+    display: flex;
+    position: relative;
+  }
 }
- 
+
+@media screen and (min-width: 768px) {
+  .tech {
+    &__logo {
+      width: 11%;
+    } 
+
+    &__logo-container {
+      padding-bottom: 1rem;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .tech {
+    &__logo {
+      width: 5%;
+    }  
+  }
+}
